[DEV] Query 모델 조회에 캐시 적용